--- a/views/card/find.ejs
+++ b/views/card/find.ejs
@@ -1,6 +1,6 @@
 <div class="container">
     <h3></h3>
-    <%  _.each(data.cards, function(card) { %>
+    <%  _.each(data, function(card) { %>
         <a href="<%= sails.getBaseurl() %>/card/<%= card.id %>"><%= card.name %></a></br />
     <% }) %>
 </div>
