--- a/views/search/results.ejs
+++ b/views/search/results.ejs
@@ -8,12 +8,39 @@
         <%  if (!data.cards) { %>
             <hr>
             There were no results for your search.
-        <% } else {
-            _.each(data.cards, function(card) { %>
-                <hr>
-                <img class="cardThumb" src="http://mtgimage.com/set/<%= card.set.code %>/<%= card.imageName %>.full.jpg">
-                <a href="<%= sails.getBaseurl() %>/card/<%= card.id %>"><%= card.name %></a> &mdash; <%= card.set.name %></br />
-                <%= card.rarity %>, <%= card.type %>
-            <% })
-        } %>
+        <% } else { %>
+        <hr>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Image</th>
+                    <th>Name</th>
+                    <th>Rarity</th>
+                    <th>Set</th>
+                    <th>Type</th>
+                </tr>
+            </thead>
+            <tbody>
+            <%_.each(data.cards, function(card) { %>
+                <tr>
+                    <td>
+                        <a href="<%= sails.getBaseurl() %>/card/<%= card.id %>"><img class="cardThumb" src="http://mtgimage.com/set/<%= card.set.code %>/<%= card.imageName %>.full.jpg"></a>
+                    </td>
+                    <td>
+                        <a href="<%= sails.getBaseurl() %>/card/<%= card.id %>"><%= card.name %></a>
+                    </td>
+                    <td>
+                        <%= card.rarity %>
+                    </td>
+                    <td>
+                        <a href="<%= sails.getBaseurl() %>/set/<%= card.set.id %>"><%= card.set.name %></a>
+                    </td>
+                    <td>
+                        <%= card.type %>
+                    </td>
+                </tr>
+            <% }) %>
+            </tbody>
+        </table>
+        <% } %>
     </div>
