Have/Want List - Login
Updated functionality for have/want list, added static login page.

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,21 +1,83 @@
-<div class="container">
-    <% if (errors) {%>
-        <% errors.forEach(function (error) { %>
-            <%= __(error) %>
-        <% }) %>
-    <% } %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <title>Login // Opacity Admin</title>
 
-    <form role="form" action="/auth/local" method="post">
-        <input type="text" name="identifier" placeholder="Username or Email">
-        <input type="password" name="password" placeholder="Password">
-        <button type="submit">Sign in</button>
-    </form>
+    <!-- Default Styles (DO NOT TOUCH) -->
+    <link rel="stylesheet" href="/styles/font-awesome.min.css">
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/fonts.css">
+    <link rel="stylesheet" href="/styles/opacity-admin.css"/>
 
-    <% if (providers) {%>
-      <h4>You can also use one of these...</h4>
+    <!-- Adjustable Styles -->
+    <link rel="stylesheet" href="/styles/icheck.css">
 
-        <% Object.keys(providers).forEach(function (key) { %>
-            <a href="/auth/<%= providers[key].slug %>" role="button"><%= providers[key].name %></a>
-        <% }) %>
-    <% } %>
-</div>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+        <script src="/js/html5shiv.js"></script>
+        <script src="/js/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+<body>
+
+    <div class="contain">
+
+        <!-- BEGIN LOGIN -->
+        <div class="login">
+            <div class="login-box">
+
+                <!-- LOGIN LOGO -->
+                <div class="log-logo">
+                    <img src="/images/img/logo3.png">
+                </div>
+
+                <!-- LOGIN FORM -->
+                <form role="form" action="/auth/local" method="post">
+                    <div class="log-contain">
+                        <div class="form-group">
+                            <label for="email">Email/Username</label>
+                            <input type="text" class="form-control col-sm-12" id="email" name="identifier" placeholder="Username or Email">
+                        </div>
+                        <div class="form-group">
+                            <label for="user">Password</label>
+                            <input type="password" class="form-control col-sm-12" id="user" name="password" placeholder="Password">
+                        </div>
+                        <div class="form-group">
+                            <input tabindex="13" type="checkbox" class="icheck-blue" id="fc1" checked>
+                            <label class="checkbox-label" for="fc1">Remember Me</label>
+                        </div>
+                    </div>
+
+
+                    <!-- LOGIN BUTTONS -->
+                    <div class="log-footer">
+                        <div class="forgot"><a href="#">Forgot Password?</a></div>
+                        <a href="index.html" class="btn btn-default">Cancel</a>&nbsp;&nbsp;
+                        <input type="submit" value="Login" class="btn btn-info">
+                    </div>
+                </form>
+
+            </div>
+
+            <!-- LOGIN SOCIAL BUTTONS -->
+            <a href="#" class="btn btn-primary btn-login"><i class="fa fa-facebook"></i></a>
+            <a href="#" class="btn btn-info btn-login"><i class="fa fa-twitter"></i></a>
+
+        </div>
+
+    </div>
+
+    <!-- Default JS (DO NOT TOUCH) -->
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+
+    <!-- Adjustable JS -->
+    <script src="/js/icheck.min.js"></script>
+    <script>
+        $('.icheck-blue').iCheck({ checkboxClass: 'icheckbox_flat-blue', radioClass: 'iradio_flat-blue' });
+    </script>
+
+</body>
+</html>
