--- a/views/card/findOne.ejs
+++ b/views/card/findOne.ejs
@@ -8,9 +8,14 @@
 <li> Card Text: <%= data.text %></li>
 <% if (data.flavor) { %><li> Flavor Text: <%= data.flavor %></li> <% } %>
 <li> Artist: <%= data.artist %></li>
-<form role="form" action="/wantList?user=1&condition=1&qty=1&card=<%= data.id %>" method="post">
-    <button type="submit">Add this to your want list</button>
-</form>
-<form role="form" action="/haveList?user=1&condition=1&qty=1&card=<%= data.id %>" method="post">
-    <button type="submit">Add this to your have list</button>
+<form role="form" method="post">
+    <input type="number" name="qty" value="1">
+    <input type="radio" name="condition" value="1" checked>NM/M,
+    <input type="radio" name="condition" value="2">SP,
+    <input type="radio" name="condition" value="3">MP,
+    <input type="radio" name="condition" value="4">HP
+    <input type="hidden" name="user" value="1">
+    <input type="hidden" name="cardId" value="<%= data.id %>">
+    <button type="submit" formaction="/wantList">Add this to your want list</button>
+    <button type="submit" formaction="/haveList">Add this to your have list</button>
 </form>
