--- a/views/card/find.ejs
+++ b/views/card/find.ejs
@@ -1,8 +1,10 @@
+
     <div>
         <%  if (!data) { %>
             <hr>
             There are no cards in the database
         <% } else { %>
+        <a href="/card?sort=name&limit=25">Next</a>
         <hr>
         <table class="table table-striped">
             <thead>
@@ -18,7 +20,7 @@
             <%_.each(data, function(card) { %>
                 <tr>
                     <td>
-                        <a href="<%= sails.getBaseurl() %>/card/<%= card.id %>"><img class="cardThumb" src="http://mtgimage.com/set/<%= card.set.code %>/<%= card.imageName %>.full.jpg"></a>
+                        <a href="<%= sails.getBaseurl() %>/card/<%= card.id %>"><img class="cardThumb" src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=<%= card.multiverseId %>&type=card"></a>
                     </td>
                     <td>
                         <a href="<%= sails.getBaseurl() %>/card/<%= card.id %>"><%= card.name %></a>
